deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dice-roller
  labels:
    'backstage.io/kubernetes-id': dice-roller
spec:
  selector:
    matchLabels:
      app: dice-roller
  replicas: 4
  template:
    metadata:
      labels:
        app: dice-roller
        'backstage.io/kubernetes-id': dice-roller
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          args:
            - bash
            - -c
            - yes > /dev/null & yes > /dev/null & yes > /dev/null
          resources:
            requests:
              memory: '64Mi'
              cpu: '50m'
            limits:
              memory: '128Mi'
              cpu: '50m'
          ports:
            - containerPort: 80
