deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: user-sample-service
  labels:
    app: user-sample-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-sample-service
  template:
    metadata:
      labels:
        app: user-sample-service
    spec:
      containers:
        - name: idp-sample-user-service
          image: quay.io/minnie0531/user-sample-service
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
