k8-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: user-service
  namespace: crossplane-system
  labels:
    app: user-service
    backstage.io/kubernetes-id: crossplane-rds    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
        backstage.io/kubernetes-id: crossplane-rds
    spec:
      containers:
        - name: idp-user-service
          image: quay.io/minnie0531/user-sample-service
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
