service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: crossplane-system
  labels:
    app: user-service
    tier: api
    backstage.io/kubernetes-id: crossplane-rds
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: user-service
