route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: user-sample-service
  backstage.io/kubernetes-id: crossplane-rds
  namespace: crossplane-system
spec:
  path: /
  to:
    kind: Service
    name: user-sample-service
  port:
    targetPort: http
